<resources>
    <string name="app_name">RishtaApp</string>
    <string name="description">RishtaApp</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="textrights">All rights reserved innovation of WMTechnologies</string>
    <string name="details">Please enter your details</string>
    <string name="textlog">Username</string>
    <string name="textpass">Password</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="marital_status_options">
        <item>Never Married</item>
        <item>Married</item>
        <item>Single</item>
        <item>Divorced</item>
        <item>Divorced with Children</item>
    </string-array>
    <string-array name="status">
        <item>Rishta In-Process</item>
        <item>Rishta Done</item>
        <item>Not Processing</item>
        <item>Closed</item>

    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>


    </string-array>



</resources>